--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "name": "cwaifw",
-  "module": "index.ts",
+  "version": "0.0.1",
   "type": "module",
-  "private": true,
-  "devDependencies": {
-    "@types/bun": "latest"
-  },
-  "peerDependencies": {
-    "typescript": "^5"
+  "scripts": {
+    "build": "tsc",
+    "download-files": "node dist/index.js download-files",
+    "dev": "node dist/index.js dev",
+    "start": "node dist/index.js start"
   },
   "dependencies": {
     "@livekit/agents": "^1.0.40",
+    "@livekit/agents-plugin-google": "^1.0.40",
     "@livekit/agents-plugin-silero": "^1.0.40"
+  },
+  "devDependencies": {
+    "typescript": "^5.5.0",
+    "@types/node": "^25.0.0"
   }
 }
