--- a/livekit.yaml
+++ b/livekit.yaml
@@ -1,14 +1,20 @@
 port: 7880
-log_level: info
-
+bind_addresses:
+    - ""
 rtc:
-  tcp_port: 7881
-  port_range_start: 50000
-  port_range_end: 60000
-  use_external_ip: true
-
-redis:
-  address: localhost:6379
+    udp_port: 7882
+    tcp_port: 7881
+    use_external_ip: true
 
 keys:
-  lkitkey: mysecretkey123456789abcdef
+    devkey: 121123dwqdwfwee231dwefw&
+
+logging:
+    json: false
+    level: info
+
+redis:
+    address: redis:6379
+    username: ""
+    password: ""
+    db: 0
